# opencode-usage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/opencode_usage/: __init__.py  __main__.py  _opencode_cli.py  auth.py  cli.py  db.py  insights.py  llm.py  models.py  render.py
src/opencode_usage/insights/: __init__.py  analyze.py  cache.py  extract.py  orchestrator.py  prompts.py  report.py  types.py
tests/: conftest.py  test_auth.py  test_cli.py  test_db.py  test_insights.py  test_insights_analyze.py  test_insights_cache.py  test_insights_extract.py  test_insights_orchestrator.py  test_insights_prompts.py  test_insights_report.py  test_insights_types.py  test_llm.py  test_models.py  test_opencode_cli.py  test_render.py
