[project]
name = "opencode-usage"
version = "0.1.0"
description = "CLI tool to track and display OpenCode token usage statistics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
opencode-usage = "opencode_usage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_usage"]

[tool.hatch.build.targets.sdist]
include = ["src/opencode_usage"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["opencode_usage"]
